[tool.poetry]
name = "read_ny_times_articles"
version = "0.1.0"
description = ""
authors = ["Leah"]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.10.0"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
mypy = "^1.0.0"
pylint = "^2.12.2"
black = "^21.12b0"
isort = "^5.10.1"

[tool.black]
line-length = 80
skip-string-normalization = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
